fetchandfind/store/static/css/product-styles.css
body {
    margin: 0;
    padding: 0;
    background-color: rgb(223, 223, 223);

}

* { 
    font-family: 'Mulish', sans-serif;
    font-style: bold; 
}

button {
    transition: 0.3s all ease-in-out;
    cursor: pointer;
    color: rgb(236, 236, 236);
    border-radius: 10px;
}

.product-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    background-color: rgb(223, 223, 223);
}

header {
    width: 100%;
    padding-left: 5%;
    background-color: rgb(46, 76, 137);
    height: 13vh;
    margin: 0;
    padding-top: 5px;
    padding-bottom: 5px;
}

header h1 {
    font-size: 190%;
    color: rgb(236, 236, 236);
}

#search-bar {
    width: 40vw;
    height: 5vh; 
    border-radius: 15px;
    border: none;
    margin-right: 2vw;
    padding-left: 2%;
    font-size: 110%;
}

#filter-dropdown {
    width: 7vw;
    height: 3vh;
    margin-top: 1.2%;
    border-radius: 5px;
    border: none;
    margin-right: 1vw;

}

#sort-bar {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    background-color: rgb(37, 61, 109);
    width:100%;
    height: 5vh;
    margin-bottom: 2vh;

 }
 
 
 .filter-button {
    width: 15%;
    height: 5vh;
    background: transparent;
    border: none;
    font-size: 100%;
 }

 .filter-button:hover {
    background-color: rgb(46, 75, 132);
    font-size: 130%;
}
 
.product {
    display: flex;
    flex-direction: column;
    width: 22%;
    align-items: center;
    border: solid 10px rgb(223, 223, 223);;
    padding: 10px;
    height: 60vh;
    border-radius: 20px;
    background-color: rgb(255, 255, 255);
}

.product:hover {
    transform:scale(1.03);
    background-color: rgb(200, 205, 219);
 }

 a {
    color: white;
 }
 
.product h2 {
    font-size: 130%;
    display: -webkit-box; 
    -webkit-line-clamp: 3; 
    -webkit-box-orient: vertical; 
    overflow: hidden; 
    text-overflow: ellipsis; 
    height: 4.0em;
    line-height: 1.4em;

}

.product img {
    object-fit: contain;
    width: 50%;
    height: 20vh;
    border-radius: 10px;
    padding-top: 20%;
    padding-bottom: 20%;
}


.product-buttons {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 2%;
}

.add-to-cart-button {
    width: 25vh;
    height: 4vh;
    background-color: rgb(210, 119, 119);
}

.favorite-button {
    width: 4vw;
    height: 4vh;
    background-color: rgb(61, 90, 147);
    display: flex;
    justify-content: center;
    align-items: center;
}

.favorite-icon {
    width: 3vw;
    height: 3vh;
    filter: invert(1);
}

.favorite-button:hover {
    background-color: rgb(70, 100, 161);
    transform: scale(1.05)
}

.add-to-cart-button:hover {
    background-color: rgb(239, 139, 139);
    transform: scale(1.05)
}

input {
    width: 170%;
}

.product a.product-link {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    height: 100%;
    text-decoration: none;
    color: inherit;
}

